# sil

./: .clang-format  .gitignore  LICENSE  README.md  meson.build
include/: libsil.h  sil_io.h  sil_iter.h  sil_util.h
python/: pyproject.toml  setup.py  silmodule.c
src/: cli.c  io.c  iter.c  sil.c
